{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 24,
  "lineage": "d469b883-718f-c6a0-4f50-30bcaa920521",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "My-NAT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f28f3632ed73cd5b",
            "arn": "arn:aws:ec2:ca-central-1:072510493080:elastic-ip/eipalloc-0f28f3632ed73cd5b",
            "domain": "vpc",
            "id": "eipalloc-0f28f3632ed73cd5b",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-98-228-31.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.98.228.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-nat-eip",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-nat-eip",
              "Project": "Devops-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:internet-gateway/igw-018735f7c3abf84ee",
            "id": "igw-018735f7c3abf84ee",
            "owner_id": "072510493080",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-igw",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-igw",
              "Project": "Devops-lab"
            },
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "My-NAT-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f28f3632ed73cd5b",
            "association_id": "eipassoc-0db07d93d2b799efa",
            "connectivity_type": "public",
            "id": "nat-08aff2da18da32244",
            "network_interface_id": "eni-05670075be24cd61e",
            "private_ip": "10.10.1.233",
            "public_ip": "3.98.228.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa2f1b06d1501283",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-nat-gateway",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-nat-gateway",
              "Project": "Devops-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.My-NAT-EIP",
            "module.vpc.aws_internet_gateway.My-IGW",
            "module.vpc.aws_subnet.My-Public-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0800bacb7b47c02db1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08aff2da18da32244",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0800bacb7b47c02db",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.My-NAT-EIP",
            "module.vpc.aws_internet_gateway.My-IGW",
            "module.vpc.aws_nat_gateway.My-NAT-Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_subnet.My-Public-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03de03c35bb2760dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08aff2da18da32244",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03de03c35bb2760dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.My-NAT-EIP",
            "module.vpc.aws_internet_gateway.My-IGW",
            "module.vpc.aws_nat_gateway.My-NAT-Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_subnet.My-Public-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018735f7c3abf84ee",
            "id": "r-rtb-0b659f9797900ea731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b659f9797900ea73",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.My-IGW",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:route-table/rtb-0800bacb7b47c02db",
            "id": "rtb-0800bacb7b47c02db",
            "owner_id": "072510493080",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-rt",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-rt",
              "Project": "Devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:route-table/rtb-03de03c35bb2760dd",
            "id": "rtb-03de03c35bb2760dd",
            "owner_id": "072510493080",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-rt",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-rt",
              "Project": "Devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:route-table/rtb-0b659f9797900ea73",
            "id": "rtb-0b659f9797900ea73",
            "owner_id": "072510493080",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-public-rt",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-public-rt",
              "Project": "Devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b764e937462f53",
            "route_table_id": "rtb-0800bacb7b47c02db",
            "subnet_id": "subnet-07b5ffa3e97d86492"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c9fe15cf03c9fb8",
            "route_table_id": "rtb-03de03c35bb2760dd",
            "subnet_id": "subnet-0f3d5c4a2e3d46fb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e4c3df0f197675b",
            "route_table_id": "rtb-0b659f9797900ea73",
            "subnet_id": "subnet-0fa2f1b06d1501283"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.My-Public-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087bda0ec80d34217",
            "route_table_id": "rtb-0b659f9797900ea73",
            "subnet_id": "subnet-029df8700763b3337"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.My-Public-Subnet",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:security-group/sg-0bfab48f0b16cf586",
            "description": "Allow HTTP and HTTPS traffic to public load balancers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to application tier",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfab48f0b16cf586",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Devops-lab-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "072510493080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-alb-sg",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-alb-sg",
              "Project": "Devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:security-group/sg-026741b91a0fe6a24",
            "description": "Allow application traffic only from ALB security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS for updates and AWS API access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-026741b91a0fe6a24",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow SSH only from allowed internal CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bfab48f0b16cf586"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Devops-lab-dev-app-sg",
            "name_prefix": "",
            "owner_id": "072510493080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-app-sg",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-app-sg",
              "Project": "Devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:security-group/sg-02d21132ad2eda6fa",
            "description": "Allow HTTPS access to interface VPC endpoints from inside VPC.",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow outbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-02d21132ad2eda6fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow HTTPS from VPC CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Devops-lab-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "072510493080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-vpce-sg",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-vpce-sg",
              "Project": "Devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:subnet/subnet-07b5ffa3e97d86492",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b5ffa3e97d86492",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072510493080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-subnet-1",
              "Project": "Devops-lab",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-subnet-1",
              "Project": "Devops-lab",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:subnet/subnet-0f3d5c4a2e3d46fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3d5c4a2e3d46fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072510493080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-subnet-2",
              "Project": "Devops-lab",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-private-subnet-2",
              "Project": "Devops-lab",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:subnet/subnet-0fa2f1b06d1501283",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa2f1b06d1501283",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072510493080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-public-subnet-1",
              "Project": "Devops-lab",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-public-subnet-1",
              "Project": "Devops-lab",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:subnet/subnet-029df8700763b3337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029df8700763b3337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072510493080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-public-subnet-2",
              "Project": "Devops-lab",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-public-subnet-2",
              "Project": "Devops-lab",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:vpc/vpc-0b8af0ad2d55e39eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c0e96e46b96c7baa",
            "default_route_table_id": "rtb-010431e7fb7ed9d20",
            "default_security_group_id": "sg-09c7e8bd53c856a10",
            "dhcp_options_id": "dopt-0cc6db64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8af0ad2d55e39eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010431e7fb7ed9d20",
            "owner_id": "072510493080",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-vpc",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-vpc",
              "Project": "Devops-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:vpc-endpoint/vpce-004497058af9823c4",
            "dns_entry": [
              {
                "dns_name": "vpce-004497058af9823c4-p7gvqsaf.logs.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-004497058af9823c4-p7gvqsaf-ca-central-1b.logs.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-004497058af9823c4-p7gvqsaf-ca-central-1a.logs.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "logs.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z00980512Y56NIJ9SPM2"
              },
              {
                "dns_name": "logs.ca-central-1.api.aws",
                "hosted_zone_id": "Z04624262R7JSJMSIXXM7"
              },
              {
                "dns_name": "streaming-logs.ca-central-1.api.aws",
                "hosted_zone_id": "Z07941712WOJ1SHCSC8A5"
              },
              {
                "dns_name": "streaming-logs.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z00926863RQBEFH6UBIAK"
              },
              {
                "dns_name": "logs.ca-central.api.aws",
                "hosted_zone_id": "Z047162336IWJFSUYE711"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-004497058af9823c4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0362b7eb84cae3549",
              "eni-0f9483771d14e0aaa"
            ],
            "owner_id": "072510493080",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d21132ad2eda6fa"
            ],
            "service_name": "com.amazonaws.ca-central-1.logs",
            "service_region": "ca-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.3.190",
                "subnet_id": "subnet-07b5ffa3e97d86492"
              },
              {
                "ipv4": "10.10.4.72",
                "subnet_id": "subnet-0f3d5c4a2e3d46fb1"
              }
            ],
            "subnet_ids": [
              "subnet-07b5ffa3e97d86492",
              "subnet-0f3d5c4a2e3d46fb1"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-cloudwatch-logs-endpoint",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-cloudwatch-logs-endpoint",
              "Project": "Devops-lab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_vpc.My-VPC",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:072510493080:vpc-endpoint/vpce-0cd77e80287a09827",
            "cidr_blocks": [
              "16.12.4.0/23",
              "3.5.252.0/22",
              "52.95.190.0/24",
              "52.95.146.0/23",
              "52.95.145.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cd77e80287a09827",
            "ip_address_type": "ipv4",
            "owner_id": "072510493080",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7da54014",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03de03c35bb2760dd",
              "rtb-0800bacb7b47c02db"
            ],
            "service_name": "com.amazonaws.ca-central-1.s3",
            "service_region": "ca-central-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-s3-endpoint",
              "Project": "Devops-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Devops-lab-dev-s3-endpoint",
              "Project": "Devops-lab"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b8af0ad2d55e39eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.My-Private-Subnet",
            "module.vpc.aws_vpc.My-VPC",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}